--- a/galeria.html
+++ b/galeria.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Galería | Mi Sitio Web Profesional</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
   <a href="#contenido" class="skip-link">Saltar al contenido principal</a>
